# project-euler

./: .gitignore  LICENSE  project-euler.cabal  tags
src/: MultiplesOf3Or5.hs  MyLib.hs
test/: Main.hs  MultiplesOf3Or5Spec.hs
