cabal-version:      3.0
name:               project-euler
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Agustin Jimenez
maintainer:         agustin.jimenez.backend@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:
      MultiplesOf3Or5
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite project-euler-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
      MultiplesOf3Or5Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        QuickCheck ^>=2.17.1.0,
        hspec ^>=2.11.14,
        base ^>=4.21.0.0,
        project-euler
